@@ -142,6 +142,11 @@
         <artifactId>spring-boot-starter-json</artifactId>
         <version>${redis.version}</version>
       </dependency>
+      <dependency>
+        <groupId>com.github.pagehelper</groupId>
+        <artifactId>pagehelper-spring-boot-starter</artifactId>
+        <version>${pagehelper.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -159,7 +164,7 @@
     <cloud.version>Hoxton.SR9</cloud.version>
     <druid.version>1.2.3</druid.version>
     <java.version>1.8</java.version>
-    <lombok.version>1.18.16</lombok.version>
+    <lombok.version>1.18.22</lombok.version>
     <mybatis.version>2.1.4</mybatis.version>
     <mysql.version>8.0.22</mysql.version>
     <feign.version>2.2.3.RELEASE</feign.version>
@@ -167,6 +172,7 @@
     <swagger.version>1.9.1.RELEASE</swagger.version>
     <actuator.version>2.1.13.RELEASE</actuator.version>
     <redis.version>2.1.13.RELEASE</redis.version>
+    <pagehelper.version>1.3.0</pagehelper.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
@@ -186,42 +192,13 @@
 
   <build>
     <plugins>
-      <!-- config for lombok when JDK version is too high like JDK16. -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>16</source>
-          <target>16</target>
-          <fork>true</fork>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-            <arg>-Xlint:all</arg>
-            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
-          </compilerArgs>
-          <!--for unmappable characters in classes-->
-          <encoding>UTF-8</encoding>
-          <showDeprecation>true</showDeprecation>
-          <showWarnings>true</showWarnings>
-          <!--for lombok annotations to resolve-->
-          <!--contradictory to maven, intelliJ fails with this-->
-          <annotationProcessorPaths>
-            <path>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok</artifactId>
-              <version>1.18.16</version>
-            </path>
-          </annotationProcessorPaths>
+          <source>8</source>
+          <target>8</target>
         </configuration>
       </plugin>
     </plugins>
